# scylladb_cdc

./: .gitignore  CDC_PROJECTIONS_ARCHITECTURE.md  CLEANUP_SCHEMA_DUPLICATION.md  CLEANUP_SUMMARY.md  COMPARISON.md  COMPILATION_FIXES.md  Cargo.toml  DIRECT_CDC_VERIFICATION.md  EVENT_SOURCING_AUDIT.md  Makefile  PHASE3_CHANGES.md  PHASE4_CHANGES.md  PHASE5_CHANGES.md  PHASE6_EDUCATIONAL.md  QUICKSTART.md  README.md  REFACTORING_MIGRATION_PLAN.md  REFACTORING_SUMMARY.md  REVERT_TO_PRODUCTION.md  SCHEMA_DUPLICATION_AUDIT.md  SCHEMA_FIXES_APPLIED.md  SCHEMA_QUERY_AUDIT.md  docker-compose.yml
docs/: ARCHITECTURE.adoc  ARCHITECTURE.md  CODE_WALKTHROUGH.md  CONTRIBUTING.md  DIAGRAMS.md  EVENT_SOURCING_GUIDE.md  FAQ.md  INDEX.md  QUICKSTART.md  TEST_AUDIT.md  TUTORIAL.md  VIDEO_SCRIPT.md
scripts/: init_db.sh
src/: main.rs  models.rs
src/actors/: cdc_processor.rs  cdc_processor_polling.rs  cdc_stream_processor.rs  coordinator.rs  dlq_actor.rs  health_check.rs  mod.rs  order_actor.rs
src/actors/core/: health.rs  mod.rs  supervised.rs
src/actors/infrastructure/: cdc_processor.rs  coordinator.rs  dlq.rs  health_monitor.rs  mod.rs
src/db/: dlq_schema.cql  schema.cql
src/domain/: mod.rs
src/domain/customer/: aggregate.rs  command_handler.rs  commands.rs  errors.rs  events.rs  mod.rs  value_objects.rs
src/domain/order/: aggregate.rs  command_handler.rs  commands.rs  errors.rs  events.rs  (+2 more)
src/event_sourcing/: mod.rs
src/messaging/: mod.rs  redpanda.rs
src/metrics/: mod.rs  server.rs
src/utils/: circuit_breaker.rs  mod.rs  retry.rs
tests/: integration_test.sh
(+5 files in other folders)
