[package]
name = "scylladb_cdc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.17", features = ["v4", "v7", "serde"] }
anyhow = "1.0"
tracing = "0.1"
tonic = "0.14"
tonic-health = "0.14"
tonic-reflection = "0.14"
tonic-prost = "0.14"
kameo = "0.18"
actix = "0.13"
redis = { version = "0.32.4", features = ["aio", "tokio-comp"] }
rdkafka = { version = "0.38.0", features = ["cmake-build"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"], default-features = false }
scylla = { version = "1.3.1", features = ["chrono-04"] }
prost = "0.14"
prost-types = "0.14"
async-trait = "0.1"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
scylla-cdc = "0.4.1"
prometheus = "0.14.0"
actix-web = "4"
thiserror = "2.0"
